--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,35 @@
 
 * { padding: 0; margin: 0; }
 canvas { background: #eee; display: block; margin: 0 auto; }
+
+#health-container{
+  position: relative;
+  width: 600px;
+  height: 20px;
+  margin: 0 auto;
+}
+
+#health {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 600px;
+  height: 20px;
+  border: 1px solid black;
+  background-color: #3FFF33;
+  border-radius: 10%;
+}
+
+#health-danger {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 120px;
+  height: 20px;
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
+  border-left: 1px solid black;
+  border-radius: 10%;
+  background-color: #B4003F;
+  display: none;
+}
