--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 
 * { padding: 0; margin: 0; }
-canvas { background: #eee; display: block; margin: 0 auto; }
+canvas { display: block; margin: 0 auto; }
 
 #health-container{
   position: relative;
