--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,43 @@
 
+.game {
+  display: none;
+}
+
+.introduction {
+  height: 100vh;
+  width: 100vw;
+  background-image: url("../img/life cycle.jpg");
+  background-size: 100vw 100vh;
+}
+
+.introduction:hover {
+  background-image: url("../img/fire.jpg")
+}
+
+
+.introduction img {
+  position: absolute;
+  height: 100vh;
+  width: 100vw;
+}
+
+.introduction h2 {
+  /*position: absolute;*/
+  text-align: center;
+  padding-top: 4vh;
+  color: white;
+  letter-spacing: 1vw;
+}
+.introduction h1 {
+  position: absolute;
+  text-align: center;
+  margin-top: 5vh;
+  font-size: 30vh;
+  color: rgba(255, 255, 255, 1);;
+}
+
+
+
 * { padding: 0; margin: 0; }
 canvas { display: block; margin: 0 auto; }
 
