--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,14 @@ body {
   box-shadow: 2px 2px 2px 1px rgba(3, 50, 3, 0.8);
 }
 
+#openinglayout {
+  position: absolute;
+  top: 3%;
+  left: 20%;
+}
+
+
+
 h2 {
   display: inline;
 }
@@ -55,7 +63,7 @@ h2 {
   text-align: center;
   padding-top: 4vh;
   color: white;
-  letter-spacing: 1vw;
+  letter-spacing: 0.6vw;
 }
 .introduction h1 {
   position: absolute;
@@ -65,12 +73,28 @@ h2 {
   color: rgba(255, 255, 255, 1);
 }
 
+.color {
+  font-size: 2rem;
+  color: red;
+  font-weight: bolder;
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: black;
+}
+
 .gameOver {
   display: none;
   height: 100vh;
   width: 100vw;
   background-image: url('../img/welcometohell.jpg');
   background-size: 100vw 100vh;
+}
+
+#scorelayout {
+  position: absolute;
+  top: 3%;
+  left: 31%;
+
+
 }
 
 .gameOver h1 {
@@ -89,7 +113,6 @@ h2 {
 }
 
 .gameOver h2 .yourscore {
-  position: absolute;
   margin-top: 73vh;
   text-align: center;
   font-size: 5vh;
