change title and gameover font

--- a/css/styles.css
+++ b/css/styles.css
@@ -65,6 +65,7 @@ h2 {
   letter-spacing: 0.6vw;
 }
 .introduction h1 {
+  font-family: 'Caveat Brush', cursive;
   position: absolute;
   text-align: center;
   margin-top: 5vh;
@@ -131,6 +132,7 @@ h2 {
 }
 
 .gameOver h1 {
+  font-family: 'Black Ops One', cursive;
   position: absolute;
   text-align: center;
   margin-top: 5vh;
@@ -255,6 +257,7 @@ canvas {
   }
 
   .introduction h1 {
+    font-family: 'Caveat Brush', cursive;
     position: absolute;
     text-align: center;
     margin-top: 20vh;
@@ -315,6 +318,7 @@ canvas {
   }
 
   .gameOver h1 {
+    font-family: 'Black Ops One', cursive;
     position: absolute;
     text-align: center;
     margin-top: 5vh;
